# Terminal-Access-for-NVDA

./: .coverage  .gitignore  ADVANCED_USER_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_TRACKING_IMPLEMENTATION.md  FAQ.md  FUTURE_ENHANCEMENTS.md  INSTALL.md  LINT_COMPLIANCE.md  PHASE1_SPECS.md  PHASE2_SPECS.md  QUICKSTART.md  README.md  RELEASE.md  REMAINING_WORK.md  ROADMAP.md  SPEAKUP_FEATURE_ANALYSIS.md  build.py  buildVars.py  coverage.xml  manifest.ini  requirements-dev.txt  run_tests.py  sconstruct  setup.cfg  validate.py
addon/: __init__.py  manifest.ini
docs/: README.md
native/: Cargo.toml
native/crates/termaccess-core/: Cargo.toml
native/crates/termaccess-core/src/: ansi_strip.rs  lib.rs  position_cache.rs  search.rs  text_differ.rs
native/crates/termaccess-ffi/: Cargo.toml
native/crates/termaccess-ffi/src/: ffi_types.rs  lib.rs
native/crates/termaccess-helper/: Cargo.toml
native/crates/termaccess-helper/src/: main.rs  pipe_server.rs  protocol.rs  security.rs  uia_events.rs  uia_reader.rs
scripts/: translate.py
tests/: README.md  conftest.py  test_ansi_unicode_profiles.py  test_bookmark_sections.py  test_bookmarks.py  test_braille_audio.py  test_build_hygiene.py  test_cache.py  test_character_reading.py  test_code_quality_refactors.py  test_comprehensive_coverage.py  test_config.py  test_cursor_attributes.py  test_cursor_profiles.py  test_deferred_blank.py  test_dialog_foreground.py  test_error_detection.py  test_gainfocus_refactor.py  test_gesture_conflicts.py  test_gestures.py  test_helper_e2e.py  test_helper_process.py  test_profiles.py  (+33 more)
(+67 files in other folders)
